fix: add cile to cut text if too long

--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -54,7 +54,6 @@ input {
   width: 90%;
   margin: 0;
 
-  font-size: 1rem;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
